src/objects/Order_Header__c.object
<CustomObject>
    <description>Holds Oracle order header data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account ID of Oracle order&apos;s customer number. The Oracle_Customer_Number__c field on the Account object holds Oracle customer number.
ERP Ref: MOL_ORDER_HDR_V.CUST_ID</description>
        <inlineHelpText>The account/customer this order belongs to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Order_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MOL_ORDER_HDR_V. SITE_INV_USE_ID</description>
        <inlineHelpText>Where the shipment is being invoiced.</inlineHelpText>
        <label>Bill To Address</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Bill to address</relationshipLabel>
        <relationshipName>Bill_To_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (End Customer)</relationshipLabel>
        <relationshipName>End_Customer_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Order_Holds__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any order on hold due to OM (Order Management) Hold, Price Hold AR hold etc.</inlineHelpText>
        <label>Has Order Holds?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Header_ID__c</fullName>
        <label>Oracle Header ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Oracle_Order_Number__c</fullName>
        <description>MOL_ORDER_HDR_V.ORDER_NUMBER</description>
        <externalId>true</externalId>
        <inlineHelpText>The number assigned by the system for the order entered under a customer PO.</inlineHelpText>
        <label>Oracle Order Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Oracle_Order_Status__c</fullName>
        <description>Flow Code from order header table</description>
        <inlineHelpText>The status of the ENTIRE order.  See lines for individual LINE status.</inlineHelpText>
        <label>Oracle Order Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <summarizedField>Order_Line__c.Extended_Price__c</summarizedField>
        <summaryForeignKey>Order_Line__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Created_Date__c</fullName>
        <description>The date on which the order was created in Oracle. This date could be different from the date the customer placed the order.</description>
        <inlineHelpText>Seems to be the day before the date on which the order was created or entered in Oracle. This date could be different from the date the customer placed the order.  See Flex field for PO ent dt. Could be used to show actual receipt of order-Not used today.</inlineHelpText>
        <label>Order Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Entered_Date__c</fullName>
        <description>The date on which the order was entered in Oracle</description>
        <inlineHelpText>The DATE ORDERED field in Oracle.  The date the customer&apos;s order is entered into Oracle.</inlineHelpText>
        <label>Order Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <inlineHelpText>The category type of how this order is entered into the system.</inlineHelpText>
        <label>Order Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <description>The organization with which the order was created in Oracle</description>
        <label>Organization Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <description>Purchase order date</description>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Purchase Order Number</description>
        <inlineHelpText>Purchase order from the customer with details of the order.</inlineHelpText>
        <label>Customer PO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Payment terms text</description>
        <inlineHelpText>When the amount owed by the customer is due.</inlineHelpText>
        <label>Payment Terms</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Name__c</fullName>
        <description>Price list name</description>
        <inlineHelpText>Where you would find the pricing for this customer.</inlineHelpText>
        <label>Price List Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales representative</description>
        <inlineHelpText>Salesperson currently responsible to sell to the customer.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Sales_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Where the shipment is being delivered.</inlineHelpText>
        <label>Ship To Address</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Order Header</relationshipLabel>
        <relationshipName>Ship_To_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Terms__c</fullName>
        <description>Shipment terms</description>
        <inlineHelpText>How the order is being paid. This is the Freight Terms from Oracle.  Collect: Customer must provide account # for payment.  Prepaid: Motorola Pays for.  Customer Pick-up: Customer coming to pick up.  etc.</inlineHelpText>
        <label>Shipment Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The confirmed address of where the warehouse shipped to.  In most cases this is the same as the ship-to address.</inlineHelpText>
        <label>Ultimate Ship To Address</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Ultimate ship to address</relationshipLabel>
        <relationshipName>Ultimate_Ship_To_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Header</label>
    <listViews>
        <fullName>All_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>PO_Number__c</columns>
        <columns>PO_Date__c</columns>
        <columns>Has_Order_Holds__c</columns>
        <columns>Oracle_Order_Status__c</columns>
        <columns>Order_Entered_Date__c</columns>
        <columns>Order_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>